--- a/src/application/SoloIda.fxml
+++ b/src/application/SoloIda.fxml
@@ -7,25 +7,28 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="200.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.BilletesClass">
+<AnchorPane prefHeight="200.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.BilletesClass">
    <children>
-      <ChoiceBox layoutX="56.0" layoutY="40.0" prefHeight="25.0" prefWidth="184.0" />
-      <ChoiceBox layoutX="246.0" layoutY="40.0" prefHeight="25.0" prefWidth="168.0" />
-      <Button layoutX="388.0" layoutY="103.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="26.0" text="-">
+      <ChoiceBox layoutX="50.0" layoutY="25.0" prefHeight="50.0" prefWidth="350.0" />
+      <ChoiceBox layoutX="400.0" layoutY="25.0" prefHeight="50.0" prefWidth="350.0" />
+      <Button layoutX="700.0" layoutY="125.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" style="-fx-background-color: #1D334A;" text="-" textFill="#f6f6f6">
          <font>
-            <Font size="10.0" />
+            <Font name="System Bold" size="24.0" />
          </font>
       </Button>
-      <Button layoutX="305.0" layoutY="103.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="26.0" text="+">
+      <Button layoutX="600.0" layoutY="125.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" style="-fx-background-color: #1D334A;" text="+" textFill="#f6f6f6">
          <font>
-            <Font size="10.0" />
+            <Font name="System Bold" size="24.0" />
          </font>
       </Button>
-      <Text layoutX="338.0" layoutY="125.0" strokeType="OUTSIDE" strokeWidth="0.0" text="1" wrappingWidth="44.13671875">
+      <Text fill="#1d334a" layoutX="650.0" layoutY="163.0" strokeType="OUTSIDE" strokeWidth="0.0" text="1" textAlignment="CENTER" wrappingWidth="50.0">
          <font>
-            <Font size="24.0" />
+            <Font name="Malgun Gothic" size="32.0" />
          </font>
       </Text>
-      <TextField layoutX="56.0" layoutY="103.0" prefHeight="25.0" prefWidth="239.0" />
+      <TextField layoutX="50.0" layoutY="125.0" prefHeight="50.0" prefWidth="550.0" promptText="ida">
+         <font>
+            <Font name="Malgun Gothic" size="22.0" />
+         </font></TextField>
    </children>
 </AnchorPane>
