--- a/src/application/SoloIda.fxml
+++ b/src/application/SoloIda.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="500.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.BilletesClass">
+<AnchorPane prefHeight="500.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.BilletesClass">
    <children>
       <Button fx:id="menosBilletes" layoutX="700.0" layoutY="125.0" mnemonicParsing="false" onMouseClicked="#alterNumBilletes" prefHeight="50.0" prefWidth="50.0" style="-fx-background-color: #1D334A;" text="-" textFill="#f6f6f6">
          <font>
@@ -34,7 +34,7 @@
       <DatePicker fx:id="dpIda" layoutX="50.0" layoutY="125.0" prefHeight="51.0" prefWidth="550.0" />
       <ComboBox fx:id="cbOrigen" layoutX="50.0" layoutY="25.0" onAction="#eventAction" onMouseClicked="#setComboBox" prefHeight="51.0" prefWidth="350.0" />
       <ComboBox fx:id="cbDestino" layoutX="400.0" layoutY="25.0" onAction="#eventAction" onMouseClicked="#setComboBox" prefHeight="51.0" prefWidth="350.0" />
-      <Button fx:id="btnAddCarrito" layoutX="655.0" layoutY="409.0" mnemonicParsing="false" onMouseClicked="#reservaBilletes" prefHeight="75.0" prefWidth="125.0" style="-fx-background-color: #e55137;" text="añadir al carrito" textAlignment="CENTER" textFill="#f6f6f6" wrapText="true">
+      <Button fx:id="btnAddCarrito" layoutX="600.0" layoutY="400.0" mnemonicParsing="false" onMouseClicked="#reservaBilletes" prefHeight="75.0" prefWidth="150.0" style="-fx-background-color: #e55137;" text="añadir al carrito" textAlignment="CENTER" textFill="#f6f6f6" wrapText="true">
          <font>
             <Font name="Malgun Gothic Bold" size="18.0" />
          </font>
@@ -42,9 +42,9 @@
             <Cursor fx:constant="HAND" />
          </cursor>
       </Button>
-      <Text fx:id="txtPrecio" layoutX="108.0" layoutY="466.0" strokeType="OUTSIDE" strokeWidth="0.0">
+      <Text fx:id="txtPrecio" fill="#1d334a" layoutX="450.0" layoutY="454.0" strokeType="OUTSIDE" strokeWidth="0.0" text="0.00" wrappingWidth="150.0">
          <font>
-            <Font size="24.0" />
+            <Font name="Malgun Gothic" size="40.0" />
          </font>
       </Text>
    </children>
