--- a/bin/application/SoloIda.fxml
+++ b/bin/application/SoloIda.fxml
@@ -8,9 +8,9 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="500.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.BilletesClass">
+<AnchorPane prefHeight="500.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.BilletesClass">
    <children>
-      <Button fx:id="menosBilletes" layoutX="700.0" layoutY="125.0" mnemonicParsing="false" onMouseClicked="#alterNumBilletes" prefHeight="50.0" prefWidth="50.0" style="-fx-background-color: #1D334A;" text="-" textFill="#f6f6f6">
+      <Button fx:id="menosBilletes" layoutX="700.0" layoutY="125.0" mnemonicParsing="false" onAction="#eventActionPrecio" prefHeight="50.0" prefWidth="50.0" style="-fx-background-color: #1D334A;" text="-" textFill="#f6f6f6">
          <font>
             <Font name="System Bold" size="24.0" />
          </font>
@@ -18,7 +18,7 @@
             <Cursor fx:constant="HAND" />
          </cursor>
       </Button>
-      <Button fx:id="masBilletes" layoutX="600.0" layoutY="125.0" mnemonicParsing="false" onMouseClicked="#alterNumBilletes" prefHeight="50.0" prefWidth="50.0" style="-fx-background-color: #1D334A;" text="+" textFill="#f6f6f6">
+      <Button fx:id="masBilletes" layoutX="600.0" layoutY="125.0" mnemonicParsing="false" onAction="#eventActionPrecio" prefHeight="50.0" prefWidth="50.0" style="-fx-background-color: #1D334A;" text="+" textFill="#f6f6f6">
          <font>
             <Font name="System Bold" size="24.0" />
          </font>
@@ -31,9 +31,9 @@
             <Font name="Malgun Gothic" size="32.0" />
          </font>
       </Text>
-      <DatePicker fx:id="dpIda" layoutX="50.0" layoutY="125.0" prefHeight="51.0" prefWidth="550.0" />
-      <ComboBox fx:id="cbOrigen" layoutX="50.0" layoutY="25.0" onMouseClicked="#setComboBox" prefHeight="51.0" prefWidth="350.0" />
-      <ComboBox fx:id="cbDestino" layoutX="400.0" layoutY="25.0" onMouseClicked="#setComboBox" prefHeight="51.0" prefWidth="350.0" />
+      <DatePicker fx:id="dpIda" layoutX="50.0" layoutY="125.0" onAction="#eventActionPrecio" prefHeight="51.0" prefWidth="550.0" />
+      <ComboBox fx:id="cbOrigen" layoutX="50.0" layoutY="25.0" onAction="#eventActionPrecio" onMouseClicked="#setComboBox" prefHeight="51.0" prefWidth="350.0" />
+      <ComboBox fx:id="cbDestino" layoutX="400.0" layoutY="25.0" onAction="#eventActionPrecio" onMouseClicked="#setComboBox" prefHeight="51.0" prefWidth="350.0" />
       <Button fx:id="btnAddCarrito" layoutX="600.0" layoutY="400.0" mnemonicParsing="false" onMouseClicked="#reservaBilletes" prefHeight="75.0" prefWidth="150.0" style="-fx-background-color: #e55137;" text="añadir al carrito" textAlignment="CENTER" textFill="#f6f6f6" wrapText="true">
          <font>
             <Font name="Malgun Gothic Bold" size="18.0" />
