--- a/bin/application/SoloIda.fxml
+++ b/bin/application/SoloIda.fxml
@@ -4,11 +4,13 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="500.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.BilletesClass">
+<AnchorPane prefHeight="500.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.BilletesClass">
    <children>
       <Button fx:id="btnMenosBilletes" layoutX="700.0" layoutY="125.0" mnemonicParsing="false" onAction="#precioSumaResta" prefHeight="50.0" prefWidth="50.0" style="-fx-background-color: #1D334A;" text="-" textFill="#f6f6f6">
          <font>
@@ -47,13 +49,20 @@
             <Font name="Malgun Gothic" size="40.0" />
          </font>
       </Text>
-      <Button fx:id="btnCambiaCiudad" layoutX="377.0" layoutY="25.0" mnemonicParsing="false" onMouseClicked="#cambiaCiudad" prefHeight="51.0" prefWidth="66.0" style="-fx-background-color: #1D334A;" text="&gt;&lt;" textFill="#f6f6f6">
+      <Button fx:id="btnCambiaCiudad" layoutX="377.0" layoutY="25.0" mnemonicParsing="false" onMouseClicked="#cambiaCiudad" prefHeight="51.0" prefWidth="66.0" style="-fx-background-color: #1D334A;" textFill="#f6f6f6">
          <font>
             <Font name="System Bold" size="24.0" />
          </font>
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor>
+         <graphic>
+            <ImageView fitHeight="32.0" fitWidth="34.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../images/interchange.png" />
+               </image>
+            </ImageView>
+         </graphic>
       </Button>
    </children>
 </AnchorPane>
