--- a/src/application/BilletesPage.fxml
+++ b/src/application/BilletesPage.fxml
@@ -4,12 +4,14 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="600.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.BilletesClass">
+<AnchorPane prefHeight="600.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.BilletesClass">
    <children>
       <BorderPane fx:id="bp" layoutX="226.0" layoutY="100.0" prefHeight="500.0" prefWidth="800.0">
          <center>
@@ -52,28 +54,35 @@
                         <Font name="Malgun Gothic" size="40.0" />
                      </font>
                   </Text>
-                  <Button fx:id="btnCambiaCiudad" layoutX="377.0" layoutY="25.0" mnemonicParsing="false" onMouseClicked="#cambiaCiudad" prefHeight="51.0" prefWidth="66.0" style="-fx-background-color: #1D334A;" text="&gt;&lt;" textFill="#f6f6f6">
+                  <Button fx:id="btnCambiaCiudad" layoutX="377.0" layoutY="25.0" maxHeight="51.0" maxWidth="66.0" mnemonicParsing="false" onMouseClicked="#cambiaCiudad" prefHeight="51.0" prefWidth="66.0" style="-fx-background-color: #1D334A;" textFill="#f6f6f6">
                      <font>
                         <Font name="System Bold" size="24.0" />
                      </font>
                      <cursor>
                         <Cursor fx:constant="HAND" />
                      </cursor>
+                     <graphic>
+                        <ImageView fitHeight="32.0" fitWidth="34.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../../images/interchange.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
                   </Button>
                </children>
             </AnchorPane>
          </center>
       </BorderPane>
-      <Button fx:id="btnSoloIda" layoutX="240.0" layoutY="28.0" mnemonicParsing="false" onMouseClicked="#cargaSoloIda" prefHeight="50.0" prefWidth="100.0" style="-fx-background-color: #1D334A;" text="solo ida" textAlignment="CENTER" textFill="#f6f6f6" wrapText="true">
+      <Button fx:id="btnSoloIda" layoutX="276.0" layoutY="28.0" mnemonicParsing="false" onMouseClicked="#cargaSoloIda" prefHeight="50.0" prefWidth="100.0" style="-fx-background-color: #5dc1b9;" text="solo ida" textAlignment="CENTER" textFill="#f6f6f6" wrapText="true">
          <font>
-            <Font name="Malgun Gothic" size="14.0" />
+            <Font name="Malgun Gothic Bold" size="14.0" />
          </font>
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor></Button>
-      <Button fx:id="btnVuelta" layoutX="400.0" layoutY="28.0" mnemonicParsing="false" onMouseClicked="#cargaIdaYvuelta" prefHeight="50.0" prefWidth="100.0" style="-fx-background-color: #1D334A;" text="ida y vuelta" textAlignment="CENTER" textFill="#f6f6f6" wrapText="true">
+      <Button fx:id="btnVuelta" layoutX="406.0" layoutY="28.0" mnemonicParsing="false" onMouseClicked="#cargaIdaYvuelta" prefHeight="50.0" prefWidth="100.0" style="-fx-background-color: #5dc1b9;" text="ida y vuelta" textAlignment="CENTER" textFill="#f6f6f6" wrapText="true">
          <font>
-            <Font name="Malgun Gothic" size="14.0" />
+            <Font name="Malgun Gothic Bold" size="14.0" />
          </font>
          <cursor>
             <Cursor fx:constant="HAND" />
