--- a/src/application/CarritoPage.fxml
+++ b/src/application/CarritoPage.fxml
@@ -1,21 +1,35 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.Cursor?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
+<?import javafx.scene.text.TextFlow?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1820.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.CarritoClass">
    <children>
-      <Text fx:id="hola" layoutX="619.0" layoutY="292.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Carrito">
+      <Button fx:id="btnComprar" layoutX="913.0" layoutY="518.0" mnemonicParsing="false" onMouseClicked="#comprar" prefHeight="55.0" prefWidth="117.0" style="-fx-background-color: #e55137;" text="comprar" textAlignment="CENTER" textFill="#f6f6f6" wrapText="true">
          <font>
-            <Font size="26.0" />
+            <Font name="Malgun Gothic Bold" size="14.0" />
          </font>
-      </Text>
-      <Text fx:id="hola1" layoutX="413.0" layoutY="328.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Aqui se desglosará el carrito y su importe...">
-         <font>
-            <Font size="26.0" />
-         </font>
-      </Text>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </Button>
+      <ScrollPane layoutX="250.0" prefHeight="503.0" prefWidth="780.0">
+         <content>
+            <TextFlow fx:id="txtListado" lineSpacing="2.0" prefHeight="496.0" prefWidth="762.0" textAlignment="CENTER">
+               <children>
+                  <Text fx:id="txtCarrito" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="83.0">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </Text>
+               </children>
+            </TextFlow>
+         </content>
+      </ScrollPane>
    </children>
 </AnchorPane>
